<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/general"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistikk_snusbruk"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priser_per_eske"/>

        <TextView
            android:id="@+id/tv_priser_per_eske"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antall_esker"/>

        <TextView
            android:id="@+id/tv_antall_esker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            />
    </LinearLayout>    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gjennomsnitt_ant_esker"/>

    <TextView
        android:id="@+id/tv_snitt_antall_esker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        />
</LinearLayout>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_add_pris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pris"/>

        <Button
            android:id="@+id/btn_new_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eske"/>
    </LinearLayout>

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Resett hele driten"
    android:id="@+id/btn_reset"/>


</LinearLayout>
